--- a/.gitignore
+++ b/.gitignore
@@ -9,12 +9,10 @@
 .zcalc_history
 
 # A popular plugin manager's files
-._zinit
 ._zi
 .zi_lastupd
-.zinit_lastupd
 
-# zdharma/zshelldoc tool's files
+# zdharma/zsdoc tool's files
 zsdoc/data
 
 # robbyrussell/oh-my-zsh/plugins/per-directory-history plugin's files
